# trying-mc-again

./: .gitignore  CMakeLists.txt
include/: GLProject.h  block.h  camera.h  chunk.h  common.h  io.h  noise.h  shader.h  skybox.h  texture.h  vao.h  vbo.h  world.h
include/blocks/: grass.h
res/: background.frag  background.vert  chunk.frag  chunk.vert  frag.glsl  skybox.frag  sun.vert
src/: CMakeLists.txt  block.c  camera.c  chunk.c  io.c  main.c  shader.c  skybox.c  texture.c  vao.c  vbo.c  world.c
src/blocks/: air.c  dirt.c  grass.c
